tests/scan/fixtures/validation/negative/clean_go_clean-middleware-lib/go.mod
module github.com/example/clean-middleware-lib
go 1.21
